--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   "description": "Lightweight service to fetch client IP address.",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node build/index.js",
-    "dev": "nodemon src/index.ts"
+    "build": "rimraf build && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add build",
+    "prod": "node build/index.js",
+    "start": "nodemon src/index.ts"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PydevAzmi/IpInfo.git"
@@ -29,6 +36,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "pre-commit": "^1.2.2",
+    "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0"
   }
 }
